--- a/src/css/index.css
+++ b/src/css/index.css
@@ -343,11 +343,11 @@ main {
   text-shadow: 1px 1px 1px rgba(150, 150, 150, .4);
 }
 
-#title:before {
+#cat:before {
   display: block;
   content: " ";
-  margin-top: -240px;
-  height: 240px;
+  margin-top: -200px;
+  height: 200px;
   visibility: hidden;
 }
 
@@ -363,6 +363,44 @@ main {
   font: 16px Roboto-Light, sans-serif;
   color: #71a0be;
   text-transform: uppercase;
+}
+
+.blog-nav {
+  text-align: center;
+  margin-top: 80px;
+}
+
+.blog-nav .item {
+  position: relative;
+  font: 24px Roboto-Light, sans-serif;
+  color: #999;
+  text-decoration: none;
+  border-bottom: 1px solid #999;
+  /*padding: 0 2px;*/
+  text-transform: lowercase;
+}
+
+.blog-nav .item:not(:last-child) {
+  margin-right: 6px;
+}
+
+.blog-nav a.item {
+  color: #676767;
+  border-color: #676767;
+}
+
+.blog-nav .prev:before {
+  position: absolute;
+  top: -1px;
+  left: -12px;
+  content: "❬";
+}
+
+.blog-nav .next:after {
+  position: absolute;
+  top: -1px;
+  right: -12px;
+  content: "❭";
 }
 
 .body-p {
