--- a/src/css/index.css
+++ b/src/css/index.css
@@ -417,6 +417,13 @@ h3 {
   margin-bottom: 0;
 }
 
+.a-phone {
+    color: inherit;
+    font-family: Roboto-Regular, sans-serif;
+    font-weight: normal;
+    text-decoration: none;
+}
+
 .body-p {
   margin-top: 0;
   margin-bottom: 40px;
@@ -606,6 +613,13 @@ h3 {
   cursor: not-allowed;
 }
 
+.grid {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+    /*outline: 1px solid blue;*/
+}
+
 @media screen and (min-width: 450px) {
 
   .media .customer-data {
@@ -683,6 +697,17 @@ h3 {
 
 }
 
+@media screen and (min-width: 700px) {
+
+    .grid {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .grid > div:nth-child(3){
+        grid-column-end: span 2;
+    }
+}
+
 @media screen and (min-width: 800px) {
 
   .body-p.last {
@@ -722,6 +747,15 @@ h3 {
 
   .form .input {
     margin-bottom: 40px;
+  }
+
+  .grid {
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 35px;
+  }
+
+  .grid > div:nth-child(3){
+      grid-column-end: auto;
   }
 
 }
