--- a/src/css/index.css
+++ b/src/css/index.css
@@ -557,16 +557,17 @@ h3 {
 }
 
 .media .button {
-  border-radius: 2px;
-  color: #fff;
-  background-color: #fd606e;
-}
-
-.media .button a {
   display: inline-block;
   padding: 8px 30px;
-  color: inherit;
+  border-radius: 2px;
+  color: #fff;
+  background-color: #aaa;
+}
+
+.media a.button {
+  /*color: inherit;*/
   text-decoration: none;
+  background-color: #fd606e;
 }
 
 /* Form */
