Add support for responsive images in blog posts

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -516,6 +516,10 @@ h3 {
   font: 16px OpenSans-Bold, sans-serif;
 }
 
+.media .gatsby-resp-image-wrapper {
+  max-width: none !important;
+}
+
 .media .customer-data {
   position: relative;
   margin: 10px -10px 0 -10px;
